# science-spec-kit

./: .gitignore  CHANGELOG.md  README.md  VISION.md  pyproject.toml
.github/workflows/: deploy.yml
src/specify_cli/: __init__.py
templates/: spec-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
website/: astro.config.mjs  package-lock.json
website/src/content/docs/: index.mdx  quickstart.md
