[project]
name = "science-specify-cli"
dynamic = ["version"]
description = "Science Specify CLI - Bootstrap reproducible earth science research projects with spec-driven development."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
science-specify = "specify_cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

